--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/sylhet-gym.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/gymco.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Sylhet Gym</title>
+    <title>GymCo-Female Fitness Centre</title>
   </head>
   <body>
     <div id="root"></div>
